finished functionality for pulling and removing from database

--- a/example-mongodb-usecase.ipynb
+++ b/example-mongodb-usecase.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7eff9f4d5370>"
+       "<pymongo.results.DeleteResult at 0x7fc5dac06fa0>"
       ]
      },
      "execution_count": 2,
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7eff8c60a5a0>"
+       "<pymongo.results.InsertOneResult at 0x7fc5d8595d20>"
       ]
      },
      "execution_count": 3,
@@ -194,6 +194,72 @@
     "\n",
     "print(dumps(result, indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x7fc5d85959b0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db['notifications'].insert_one({\n",
+    "    'code' : 777777,\n",
+    "    'email' : ['yeet@gmail.com', 'dab@gmail.com'],\n",
+    "    'sms' : ['555-555-5555', '789-151-2345'],\n",
+    "    'name' : 'class'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = db['notifications'].find({}, {'_id' : 0})\n",
+    "# print(dumps(result, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{123456: {'email': ['cooler-email@gmail.com'], 'name': 'class', 'sms': []},\n",
+      " 777777: {'email': ['yeet@gmail.com', 'dab@gmail.com'],\n",
+      "          'name': 'class',\n",
+      "          'sms': ['555-555-5555', '789-151-2345']}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "notifications = {}\n",
+    "for doc in result:\n",
+    "    notifications[doc['code']] = {'email' : doc['email'], 'sms' : doc['sms'], 'name' : doc['name']}\n",
+    "from pprint import pprint\n",
+    "pprint(notifications)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
